[package]
name = "movement"
version = "0.2.1"
edition = "2021"
description = "Library to help with time calculations"
readme = "README.md"
repository = "https://github.com/manorajesh/movement"
license = "MIT"
keywords = ["time", "calculator"]
categories = ["date-and-time"]
exclude = [".vscode", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "movement"